--- a/taobao/templates/error.html
+++ b/taobao/templates/error.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div style="width: 100%; margin-top: 300px;">
-	<div class="pull-center">
+	<div class="alert alert-error">
 		{{ from }}<br>
 		{{ error }}
 	</div>
