--- a/taobao/templates/html.html
+++ b/taobao/templates/html.html
@@ -19,6 +19,6 @@
 		<script src="/static/peity/jquery.peity.min.js"></script>
 		<script src="/static/morris/morris.min.js"></script>
 		<script src="/static/morris/raphael-min.js"></script>
-		<script src="/static/js/base.js"></script>
+		{% block script %}{% endblock %}
 	</body>
 </html>
