--- a/taobao/templates/base.html
+++ b/taobao/templates/base.html
@@ -18,8 +18,8 @@
 							谋商
 						</div>
 						<ul class="nav">
-							<li class="active"><a href="#">我的销售</a></li>
-							<li><a href="#">我的买家</a></li>
+							<li class="active"><a href="/">我的销售</a></li>
+							<li><a href="/buyer">我的买家</a></li>
 							<li><a href="#">我的宝贝</a></li>
 							<li><a href="#">关于我们</a></li>
 						</ul>
@@ -60,12 +60,12 @@
 		</div>
 		
 		<!-- sciprt -->
-		{% block script %}{% endblock %}
 		<script src="/static/js/jquery-1.9.1.js"></script>
 		<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/static/peity/jquery.peity.min.js"></script>
 		<script src="/static/morris/morris.min.js"></script>
 		<script src="/static/morris/raphael-min.js"></script>
 		<script src="/static/js/base.js"></script>
+		{% block script %}{% endblock %}
 	</body>
 </html>
