--- a/taobao/templates/sell/sell.html
+++ b/taobao/templates/sell/sell.html
@@ -29,7 +29,5 @@
 {% endblock %}
 
 {% block script %}
-<script>
-	var sell_data = [{"sell": 3, "pay_time": "2013-04-03"}];
-</script>
+<script src="/static/js/sell.js"></script>
 {% endblock %}
