--- a/taobao/templates/sell/sell-sell.html
+++ b/taobao/templates/sell/sell-sell.html
@@ -7,7 +7,7 @@
 	<div class="tab-content">
 		<div class="tab-pane active" id="sellcount"></div>
 		<table class="table table-hover">
-			<caption>{{ res.total_results }}</caption>
+			<caption>{{ total_results }}</caption>
 			<thead>
 				<tr>
 					<th>prop</th>
