--- a/taobao/templates/base.html
+++ b/taobao/templates/base.html
@@ -18,7 +18,7 @@
 							谋商
 						</div>
 						<ul class="nav">
-							<li class="active"><a href="/">我的销售</a></li>
+							<li><a href="/">我的销售</a></li>
 							<li><a href="/buyer">我的买家</a></li>
 							<li><a href="#">我的宝贝</a></li>
 							<li><a href="#">关于我们</a></li>
@@ -46,6 +46,18 @@
 						{% endif %}
 					</div>
 				</div>
+			</div>
+			<div id="base-info" class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				{{ info }}
+			</div>
+			<div id="base-warn" class="alert alert-warn">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				{{ warn }}
+			</div>
+			<div id="base-error" class="alert alert-error">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>{
+				{ error }}
 			</div>
 			<div class="row-fluid">
 				<div class="span2">
