--- a/taobao/templates/html.html
+++ b/taobao/templates/html.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Base</title>
-		<meta charset="utf-8" />
+		<title>{{ title }}</title>
+		<meta http-equiv="content-type" content="text/html" charset="utf-8" />
 		
 		<!-- css -->
+		<link rel="shortcut icon" href="/static/img/favicon.ico" />
 		<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="/static/morris/morris.css" />
 		<link rel="stylesheet" href="/static/css/base.css" />
